Reduce minimum width of body-wrap to prevent right sidebar from overflowing min app width of 1200px

--- a/frontend/styles/global/_global.scss
+++ b/frontend/styles/global/_global.scss
@@ -55,7 +55,7 @@ a {
   border-radius: 3px;
   background-color: $core-white;
   border: solid 1px $core-white;
-  min-width: 910px;
+  min-width: 798px;
 }
 
 .has-sidebar {
